Fixed issue with detaching a security Group from the mount target

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = amazon-efs
-version = 0.0.1
+version = 0.0.2
 author = Aliaksei Kankou
 author_email = aliaksei.kankou@gmail.com
-description = Amazon EFS (amazon-efs) allows you to interact with EFS (Amazon Elastic File System) from your local computer or on-prem.
+description = Amazon EFS (amazon-efs) allows programmatically manipulate EFS data (create, read, delete, list files) from any machine.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/kankou-aliaksei/amazon-efs
